crates/mun_compiler/src/snapshots/mun_compiler__diagnostics__tests__duplicate_definition_error.snap
---
source: crates/mun_compiler/src/diagnostics.rs
expression: "compilation_errors(\"\\n\\nfn foo(){}\\n\\nfn foo(){}\\n\\nstruct Bar;\\n\\nstruct Bar;\\n\\nfn BAZ(){}\\n\\nstruct BAZ;\")"
---
error: a value named `foo` has already been defined in this module
 --> main.mun:5:1
  |
3 | fn foo(){}
  | ^^^^^^^^ first definition of the value `foo` here
4 | 
5 | fn foo(){}
  | ^^^^^^^^ `foo` redefined here
  |
  = note: `foo` must be defined only once in the value namespace of this moduleerror: a type named `Bar` has already been defined in this module
 --> main.mun:9:1
  |
7 | struct Bar;
  | ^^^^^^^^^^ first definition of the type `Bar` here
8 | 
9 | struct Bar;
  | ^^^^^^^^^^ `Bar` redefined here
  |
  = note: `Bar` must be defined only once in the type namespace of this moduleerror: a type named `BAZ` has already been defined in this module
  --> main.mun:13:1
   |
11 | fn BAZ(){}
   | ^^^^^^^^ first definition of the type `BAZ` here
12 | 
13 | struct BAZ;
   | ^^^^^^^^^^ `BAZ` redefined here
   |
   = note: `BAZ` must be defined only once in the type namespace of this module
